--- a/src/assets/css/mobile-style.css
+++ b/src/assets/css/mobile-style.css
@@ -142,7 +142,7 @@ header{
     }
     header .accountMenu .menuList{
       position: relative;
-      top: 8.4vh;
+      top: 44px;
       left: 46vw;
       background: #FFFFFF;
       box-shadow: 0px 0px 8px rgba(194, 198, 204, 0.6);
