--- a/src/app/confirmations/confirmations.component.html
+++ b/src/app/confirmations/confirmations.component.html
@@ -1,1 +1,50 @@
-<p>confirmations works!</p>
+<h1 class="heading">Confirmations</h1>
+<img
+  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTnybLZQkb8BG9uN4bX31TBXP51qPlA3gD00g&usqp=CAU"
+  alt=""
+/>
+
+<!--Reservation-->
+<section class="title">
+  <h2>Grand Deluxe Suite</h2>
+  <p id="nights">3 nights</p>
+</section>
+<p class="location">
+  <i class="fa-solid fa-location-dot"></i>&nbsp;&nbsp;Discovery Wondersworld Phu
+  Quoc
+</p>
+
+<!--Info-->
+<section class="info">
+  <div>
+    <h3>Arrival</h3>
+    <p id="arrival">Wed, 08 Jun 2022 <br />2:00 PM</p>
+  </div>
+  <div>
+    <h3>Departure</h3>
+    <p id="departure">Sat, 11 Jun 2022 <br />12:00 PM</p>
+  </div>
+  <div>
+    <h3>Guest</h3>
+    <p id="guestNum">3 Adults</p>
+  </div>
+  <div>
+    <h3>Status</h3>
+    <div id="bg-status"><p id="status">Reserved</p></div>
+  </div>
+</section>
+<div class="lineBreak"></div>
+
+<!--Guest Info-->
+<section class="guestSection">
+  <div class="guestType" id="mainGuest">Main Guest</div>
+  <div class="boxInfo" id="mainBox">
+    <div class="guestInfo" id="mainInfo">
+      <h2 class="guestName" id="mainName">Tam Le</h2>
+      <p class="guestStatus" id="mainStatus">Verified</p>
+    </div>
+    <button class="checkinBtn" id="mainBtn" onclick="location.href='check-in'">
+      Check in
+    </button>
+  </div>
+</section>
