--- a/src/app/search-res/search-res.component.html
+++ b/src/app/search-res/search-res.component.html
@@ -3,6 +3,7 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
 />
+
 <!--Page Title-->
 <div class="title">
   <img src="assets/images/topimg.jpg" />
@@ -31,27 +32,31 @@
         />
       </div>
 
-      <label for="firstname">First Name</label>
-      <div class="input-container">
-        <input
-          type="username"
-          id="firstname"
-          placeholder="Type first name"
-          required
-        />
+      <div class="inputBox">
+        <div class="inputName">
+          <label for="firstname">First Name</label>
+          <div class="input-container">
+            <input
+              type="username"
+              id="firstname"
+              placeholder="Type first name"
+              required
+            />
+          </div>
+        </div>
+        <div class="inputDate">
+          <label for="arrivalDate">Arrival Date</label>
+          <div class="input-container">
+            <input
+              type="text"
+              id="arrivalDate"
+              placeholder="Type the arrival date"
+              autocomplete="off"
+              required
+            />
+          </div>
+        </div>
       </div>
-
-      <label for="arrivalDate">Arrival Date</label>
-      <div class="input-container">
-        <input
-          type="text"
-          id="arrivalDate"
-          placeholder="Type the arrival date"
-          autocomplete="off"
-          required
-        />
-      </div>
-
       <pre id="popup">&nbsp;</pre>
 
       <!--Reservation Validation-->
@@ -75,36 +80,36 @@
   <button class="qrScan" onclick="document.getElementById('scanQR').click();">
     <i class="fa-solid fa-qrcode"></i>
   </button>
-
-  <!--Just For You-->
-  <div class="justforu">
-    <div class="title">
-      <h2>Just For You</h2>
-      <a href="#">See All <i class="fa-solid fa-caret-right"></i></a>
-    </div>
-
-    <div class="post-box">
-      <a class="post" href="#">
-        <img src="assets/images/9.jpg" alt="" />
-        <div class="content">
-          <h3>Luxirious holiday with ultimate...</h3>
-        </div>
-      </a>
-      <a class="post" href="#">
-        <img src="assets/images/10.jpg" alt="" />
-        <div class="content">
-          <h3>Vinpearl Golf Stay & Play - 3N2D...</h3>
-        </div>
-      </a>
-      <a class="post" href="#">
-        <img src="assets/images/11.jpg" alt="" />
-        <div class="content">
-          <h3>Discover Tuesday - book CiTravel...</h3>
-        </div>
-      </a>
-    </div>
-  </div>
 </section>
+
+<!--Just For You-->
+<div class="justforu">
+  <div class="jfutitle">
+    <h2>Just For You</h2>
+    <a href="#">See All <i class="fa-solid fa-caret-right"></i></a>
+  </div>
+
+  <div class="post-box">
+    <a class="post" href="#">
+      <img src="assets/images/9.jpg" alt="" />
+      <div class="content">
+        <h3>Luxirious holiday with ultimate...</h3>
+      </div>
+    </a>
+    <a class="post" href="#">
+      <img src="assets/images/10.jpg" alt="" />
+      <div class="content">
+        <h3>Vinpearl Golf Stay & Play - 3N2D...</h3>
+      </div>
+    </a>
+    <a class="post" href="#">
+      <img src="assets/images/11.jpg" alt="" />
+      <div class="content">
+        <h3>Discover Tuesday - book CiTravel...</h3>
+      </div>
+    </a>
+  </div>
+</div>
 
 <!--Secure Verification-->
 <iframe name="dummyframe" id="dummyframe" style="display: none"></iframe>
